Ножи теперь можно кидать (#284)
* Ножи теперь можно кидать

Добавлен фан

* Revert "Ножи теперь можно кидать"

This reverts commit 8151789e2f4779e84d193d5735ffb2f21af1954c.

* Revert "Revert "Ножи теперь можно кидать""

This reverts commit 5752d7fbcb2cd448531bdec555096fca9d0449f2.

* Продолжаем кидать ножи

Нож-крашер тоже можно кидать.
Не втыкающиеся ножи наносят не Piercing, а Slash

--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/knife.yml
@@ -27,8 +27,42 @@
       path: /Audio/Items/Culinary/chop.ogg
 
 - type: entity
-  name: kitchen knife
   parent: BaseKnife
+  id: BaseKnifeThrowable
+  abstract: true
+  components:
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Piercing: 10
+
+- type: entity
+  parent: BaseKnifeThrowable
+  id: BaseKnifeThrowablePluggable
+  abstract: true
+  components:
+  - type: EmbeddableProjectile
+    offset: 0.15,0.15
+  - type: ThrowingAngle
+    angle: 225
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape: !type:PolygonShape
+          vertices:
+            - -0.40,-0.30
+            - -0.30,-0.40
+            - 0.40,0.30
+            - 0.30,0.40
+        density: 20
+        mask:
+        - ItemMask
+        restitution: 0.3
+        friction: 0.2
+
+- type: entity
+  name: kitchen knife
+  parent: BaseKnifeThrowablePluggable
   id: KitchenKnife
   description: A general purpose Chef's Knife made by Asters Merchant Guild. Guaranteed to stay sharp for years to come..
   components:
@@ -48,7 +82,7 @@
 
 - type: entity
   name: butcher's cleaver
-  parent: BaseKnife
+  parent: BaseKnifeThrowable
   id: ButchCleaver
   description: A huge blade used for chopping and chopping up meat. This includes clowns and clown-by-products.
   components:
@@ -65,6 +99,10 @@
     damage:
       types:
         Slash: 10
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 10
   - type: Item
     size: 10
     sprite: Objects/Weapons/Melee/cleaver.rsi
@@ -74,7 +112,7 @@
 
 - type: entity
   name: combat knife
-  parent: BaseKnife
+  parent: BaseKnifeThrowablePluggable
   id: CombatKnife
   description: A deadly knife intended for melee confrontations.
   components:
@@ -114,10 +152,14 @@
 
 - type: entity
   name: kukri knife
-  parent: CombatKnife
+  parent: BaseKnifeThrowable
   id: KukriKnife
   description: Professionals have standards. Be polite. Be efficient. Have a plan to kill everyone you meet.
   components:
+  - type: Tag
+    tags:
+    - CombatKnife
+    - Knife
   - type: Sprite
     sprite: Objects/Weapons/Melee/kukri_knife.rsi
     size: 2
@@ -127,9 +169,15 @@
     damage:
       types:
         Slash: 15
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Slash: 15
   - type: Item
     size: 10
     sprite: Objects/Weapons/Melee/kukri_knife.rsi
+  - type: DisarmMalus
+    malus: 0.225
 
 - type: entity
   name: shiv
