Респрайт экипировки Офицера синего щита. Добавление новой экипировки для него, и исправление ошибок. (#266)
* Blueshield Officer fix

* Blueshield Officer spawner fix

* Bluehsield spawn icone fix 2

* Locale and BH hardsuit stats fix.

* Merge conflict fix

* Merge conflict fix 2

* Try to fix merge conflict 3

* Merge conflict fix 4

* Merge conflict fix 5

* Merge conflict fix 6

* Try to fix merge conflict

* Removed EnergyShield and added Sec Hud to BSO glasses

* Try to fix merge conflict 10?

* Try to fix merge conflict 11?

* Merge fix

* Merge fix

* mantre fix

* PDA board and meta fix

* innerClothingSkirt

* EBS locale revert

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -64,6 +64,8 @@
       - id: BoxCardboardTrackImp
       - id: ClothingBeltSecurityWebbing
       - id: GarmentBagBlueShield
+      - id: ClothingHeadsetAltBlueShield
+      - id: ClothingHeadsetBlueShield
 
 - type: entity
   id: LockerCaptainFilled
