--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -450,14 +450,15 @@
     id: BlueShieldIDCard
     state: pda-blueshield
     penSlot:
-      startingItem: PenCap
+      startingItem: PenCentcom
       priority: -1
       whitelist:
         tags:
         - Write
   - type: PdaBorderColor
-    borderColor: "#1E1E32"
-    accentHColor: "#2851A4"
+    borderColor: "#323248"
+    accentHColor: "#2851a4"
+    accentVColor: "#eeeeee"
   - type: Icon
     state: pda-blueshield
 
