--- a/Resources/Prototypes/Entities/Objects/Fun/figurine_boxes.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/figurine_boxes.yml
@@ -64,6 +64,8 @@
         orGroup: SpacemenFig
       - id: ToyFigurineResearchDirector
         orGroup: SpacemenFig
+      - id: ToyFigurineBlueshieldOfficer
+        orGroup: SpacemenFig
       - id: ToyFigurineScientist
         orGroup: SpacemenFig
       - id: ToyFigurineChiefMedicalOfficer
