--- a/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/cloaks.yml
@@ -157,3 +157,12 @@
   - type: ContainerContainer
     containers:
       toggleable-clothing: !type:ContainerSlot {}
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckCloakBlueshield
+  name: blueshield officer's cloak
+  description: Why does the defender of the heads of the station need it? In order to look more stylish, of course.
+  components:
+  - type: Sprite
+    sprite: Clothing/Neck/Cloaks/blueshield.rsi
