--- a/Resources/Prototypes/Entities/Clothing/Neck/mantles.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/mantles.yml
@@ -74,3 +74,14 @@
     sprite: Clothing/Neck/mantles/qmmantle.rsi
   - type: Clothing
     sprite: Clothing/Neck/mantles/qmmantle.rsi  
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckMantleBS
+  name: blueshield officer's mantle
+  description: A nice mantle to protect your back, with a bright and completely inconspicuous, white shield emblem.
+  components:
+  - type: Sprite
+    sprite: Clothing/Neck/mantles/bsmantle.rsi
+  - type: Clothing
+    sprite: Clothing/Neck/mantles/bsmantle.rsi
