--- a/Resources/Prototypes/Entities/Clothing/Uniforms/jumpsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/Uniforms/jumpsuits.yml
@@ -78,13 +78,24 @@
 - type: entity
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitBlueShield
-  name: captain's jumpsuit
+  name: blueshield officer's jumpsuit
   description: It's a blue jumpsuit with some gold markings denoting the rank of "Captain".
   components:
   - type: Sprite
     sprite: Clothing/Uniforms/Jumpsuit/blueshield.rsi
   - type: Clothing
     sprite: Clothing/Uniforms/Jumpsuit/blueshield.rsi
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitBlueShieldTurtleneck
+  name: blueshield officer's turtleneck jumpsuit
+  description: It's a blue jumpsuit with some gold markings denoting the rank of "Captain".
+  components:
+  - type: Sprite
+    sprite: Clothing/Uniforms/Jumpsuit/blueshield_turtleneck.rsi
+  - type: Clothing
+    sprite: Clothing/Uniforms/Jumpsuit/blueshield_turtleneck.rsi
 
 - type: entity
   parent: ClothingUniformBase
