--- a/Resources/Prototypes/Entities/Objects/Fun/figurines.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/figurines.yml
@@ -26,6 +26,15 @@
   components:
   - type: Sprite
     state: hop
+
+- type: entity
+  parent: BaseFigurine
+  id: ToyFigurineBlueshieldOfficer
+  name: blueshield officer figure
+  description: A figurine depicting the blueshield officer, austere and blue, stands guard over the station government. I guess.
+  components:
+  - type: Sprite
+    state: blueshield
     
 - type: entity
   parent: BaseFigurine
