--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -764,3 +764,16 @@
   - type: Sprite
     sprite: Objects/Misc/bureaucracy.rsi
     state: stamp-deny
+
+# Starshine
+- type: entity
+  parent: Paper
+  id: StationGoalPaper
+  name: centcom station goal message
+  description: 'It looks like you have a lot of work to do.'
+  components:
+    - type: Paper
+      stampState: paper_stamp-centcom
+      stampedBy:
+      - stampedName: stamp-component-stamped-name-centcom
+        stampedColor: "#006600"
