--- a/Resources/Prototypes/Entities/Objects/Specific/Mech/mech_construction.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Mech/mech_construction.yml
@@ -502,7 +502,7 @@
   abstract: true
   components:
   - type: Item
-    size: 50
+    size: Ginormous
 
 - type: entity
   parent: BaseClarkPart
@@ -630,7 +630,7 @@
   abstract: true
   components:
   - type: Item
-    size: 50
+    size: Ginormous
 
 - type: entity
   parent: BaseOdysseusPart
@@ -758,7 +758,7 @@
   abstract: true
   components:
   - type: Item
-    size: 50
+    size: Ginormous
 
 - type: entity
   parent: BaseDurandPart
@@ -898,7 +898,7 @@
   abstract: true
   components:
   - type: Item
-    size: 50
+    size: Ginormous
 
 - type: entity
   parent: BaseGygaxPart
