--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -215,7 +215,7 @@
         map: ["enum.SolutionContainerLayers.Fill"]
         visible: false
   - type: Item
-    size: 5
+    size: Small
     sprite: Objects/Specific/Chemistry/bottle_small.rsi
   - type: SolutionContainerManager
     solutions:
@@ -256,7 +256,7 @@
         map: ["enum.SolutionContainerLayers.Fill"]
         visible: false
   - type: Item
-    size: 5
+    size: Small
     sprite: Objects/Specific/Chemistry/bottle_large.rsi
   - type: SolutionContainerManager
     solutions:
