--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/dartgun.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/dartgun.yml
@@ -15,7 +15,7 @@
     proto: Syringecartridge
     capacity: 7
   - type: Item
-    size: 3
+    size: Small
   - type: ContainerContainer
     containers:
       ballistic-ammo: !type:Container
