--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Bow/bow.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Bow/bow.yml
@@ -88,7 +88,7 @@
   parent: BaseBow
   components:
   - type: Item
-    size: 40
+    size: Normal
   - type: Sprite
     sprite: Objects/Weapons/Guns/Bow/compoundbow.rsi
     layers:
@@ -153,7 +153,7 @@
   parent: BaseBow
   components:
   - type: Item
-    size: 20
+    size: Normal
   - type: Sprite
     sprite: Objects/Weapons/Guns/Bow/compoundbow.rsi
     layers:
