--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -33,6 +33,21 @@
       - MobCockroach
 
 - type: entity
+  name: Mothroach Spawner
+  id: SpawnMobMothroach
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+      - state: green
+      - sprite: Mobs/Animals/mothroach.rsi
+        state: icon
+      - state: ai
+  - type: ConditionalSpawner
+    prototypes:
+      - MobMothroach
+
+- type: entity
   name: HoP Corgi Spawner
   id: SpawnMobCorgi
   parent: MarkerBase
