--- a/Resources/Prototypes/typing_indicator.yml
+++ b/Resources/Prototypes/typing_indicator.yml
@@ -46,6 +46,7 @@
   questionState: guardian1
   actionState: guardian2
   thinkState: guardian3
+  offset: 0, 0.0625
 
 - type: typingIndicator
   id: holo
@@ -53,6 +54,7 @@
   questionState: holo1
   actionState: holo2
   thinkState: holo3
+  offset: 0, 0.0625
 
 - type: typingIndicator
   id: blob
@@ -74,6 +76,7 @@
   questionState: lawyer1
   actionState: lawyer2
   thinkState: lawyer3
+  offset: 0.125, 0.125
 
 - type: typingIndicator
   id: signlang
