--- a/Resources/Prototypes/Entities/Mobs/NPCs/mimic.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/mimic.yml
@@ -1,43 +1,225 @@
 - type: entity
-  name: Mimic
-  id: MobMimic
-  parent: [ SimpleMobBase, MobCombat ]
-  description: Surprise. # When this gets a proper write this should use the object's actual description >:)
+  id: MobMimicBase
+  parent: SimpleMobBase
+  noSpawn: True
   components:
+  - type: Insulated
+  - type: CombatMode
+  - type: InputMover
+  - type: MobMover
   - type: Tag
     tags:
     - FootstepSound
-  - type: InputMover
-  - type: MobMover
-  - type: NpcFactionMember
-    factions:
-    - SimpleHostile
-  - type: Hands
-  - type: Sprite
-    drawdepth: Mobs
-    sprite: Structures/Machines/VendingMachines/cola.rsi
-    state: normal
-  - type: Icon
-    sprite: Structures/Machines/VendingMachines/cola.rsi
-    state: normal
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "-0.35,-0.35,0.35,0.35"
-        density: 1000
-        mask:
-        - MobMask
-        layer:
-        - MachineLayer
-  - type: AnimationPlayer
   - type: MeleeWeapon
+    hidden: true
     angle: 0
-    animation: WeaponArcFist
+    animation: WeaponArcClaw
     damage:
       types:
         Blunt: 20
   - type: MovementSpeedModifier
     baseWalkSpeed : 1
     baseSprintSpeed : 1
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      100: Dead
+  - type: MobState
+    allowedStates:
+    - Alive
+    - Dead
+  - type: DamageStateVisuals
+    rotate: true
+    states:
+      Dead:
+        Base: dead
+  - type: Bloodstream
+    bloodMaxVolume: 60
+    bloodReagent: liveSlime
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatMimic
+
+- type: entity
+  name: strider
+  id: MobStrider
+  parent: MobMimicBase
+  description: A terrible creature... The more you look at his skinny and mutilated body, the more you want to close this examine window. Wait, examine window? What are you talking about, you didn't say that?
+  components:
+  - type: FootstepModifier
+    footstepSoundCollection:
+      path: /Audio/Misc/pirce1.ogg
+  - type: NpcFactionMember
+    factions:
+    - Xeno
+  - type: Reactive
+    groups:
+      Flammable: [Touch]
+      Extinguish: [Touch]
+  - type: Sprite
+    drawdepth: Mobs
+    sprite: Mobs/Demons/strider.rsi
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: running
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcFist
+    damage:
+      types:
+        Blunt: 60
+        Structural: 70
+    soundHit:
+      path: /Audio/Weapons/pierce.ogg
+      volume: 3
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 3
+    baseSprintSpeed : 3
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      600: Dead
+  - type: AmbientSound
+    enabled: true
+    volume: 16
+    range: 10
+    sound:
+      path: /Audio/Misc/radio_static.ogg
+  - type: Tag
+    tags:
+    - Slime
+  - type: Damageable
+    damageModifierSet: SlimeMimic
+  - type: EmitSoundOnSpawn
+    sound:
+      path: /Audio/Misc/farscream.ogg
+      params:
+        volume: 6
+        maxDistance: 100
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatMimic
+    - id: ClothingMaskStrider
+  - type: GhostRole
+    allowMovement: true
+    allowSpeech: false
+    makeSentient: true
+    name: ghost-role-information-strider-name
+    description: ghost-role-information-strider-description
+    rules: ghost-role-information-strider-rules
+  - type: GhostTakeoverAvailable
+  - type: Bloodstream
+    bloodMaxVolume: 500
+
+- type: entity
+  name: clown
+  id: MobMimicClown
+  parent: MobMimicBase
+  description: Is he a human?
+  components:
+  - type: Sprite
+    sprite: Mobs/Demons/mimic.rsi
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: clown
+  - type: MeleeWeapon
+    hidden: true
+    angle: 0
+    animation: WeaponArcFist
+    damage:
+      types:
+        Blunt: 5
+        Caustic: 5
+        Structural: 30
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
+  - type: GhostRole
+    allowMovement: true
+    allowSpeech: true
+    makeSentient: true
+    name: ghost-role-information-mimic-clown-name
+    description: ghost-role-information-mimic-clown-description
+    rules: ghost-role-information-mimic-clown-rules
+  - type: GhostTakeoverAvailable
+  - type: HTN
+    rootTask:
+      task: XenoCompound
+    blackboard:
+      NavClimb: !type:Bool
+        true
+      NavInteract: !type:Bool
+        true
+      NavPry: !type:Bool
+        true
+      NavSmash: !type:Bool
+        true
+  - type: NpcFactionMember
+    factions:
+    - Xeno
+
+- type: entity
+  name: assistant
+  id: MobMimicTider
+  parent: MobMimicBase
+  description: Is he a human?
+  components:
+  - type: Sprite
+    sprite: Mobs/Demons/mimic.rsi
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: greytide
+  - type: HTN
+    rootTask:
+     task: SimpleHostileCompound
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          MobAdultSlimesBlack:
+            min: 1
+            max: 2
+  - type: StaticPrice
+    price: 5000
+
+- type: entity
+  name: assistant
+  id: MobMimicTiderAngry
+  parent: MobMimicTider
+  description: Is he a human?
+  components:
+  - type: Sprite
+    sprite: Mobs/Demons/mimic.rsi
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: greytide
+  - type: MeleeWeapon
+    hidden: true
+    angle: 0
+    animation: WeaponArcFist
+    damage:
+      types:
+        Blunt: 10
+        Caustic: 10
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
+  - type: GhostRole
+    allowMovement: true
+    allowSpeech: true
+    makeSentient: true
+    name: ghost-role-information-mimic-greytide-name
+    description: ghost-role-information-mimic-greytide-description
+    rules: ghost-role-information-mimic-greytide-rules
+  - type: GhostTakeoverAvailable
+  - type: NpcFactionMember
+    factions:
+    - Xeno
