--- a/Resources/Prototypes/Maps/Driller.yml
+++ b/Resources/Prototypes/Maps/Driller.yml
@@ -57,6 +57,7 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 4, 4 ]
             Lawyer: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 3 ]
