--- a/Resources/Prototypes/Entities/Structures/Specific/slime_toxic.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/slime_toxic.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: SlimeFloor
   name: slime floor
-  description: A rapidly growing, dangerous plant. WHY ARE YOU STOPPING TO LOOK AT IT?!
+  description: The floor is covered in slime. Gross!
   placement:
     mode: SnapgridCenter
     snap:
@@ -29,6 +29,8 @@
           shape:
             !type:PhysShapeAabb
             bounds: "-0.5,-0.5,0.5,0.5"
+          layer:
+          - MidImpassable
     - type: Damageable
       damageModifierSet: SlimeMimic
     - type: Destructible
