--- a/Resources/Prototypes/Maps/kilostation.yml
+++ b/Resources/Prototypes/Maps/kilostation.yml
@@ -56,6 +56,7 @@
             SecurityCadet: [ 2, 2 ]
             Detective: [ 1, 1 ]
             SeniorOfficer: [ 1, 1 ]
+            Brigmedic: [ 1, 1 ]
             #supply
             CargoTechnician: [ 2, 3 ]
             Quartermaster: [ 1, 1 ]
