New Gars glasses (#311)

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
@@ -59,6 +59,7 @@
         - ClothingEyesGlassesGarGiga
         - ClothingEyesGlassesGarOrange
         - ClothingEyesGlassesGar
+        - ClothingEyesGlassesGarBlack
         - ClothingHeadHatCake
         - ClothingHeadHatSkub
         - ClothingHeadHatCone
