--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -6,6 +6,7 @@
     Flash: 5
     FlashlightSeclite: 5
     ClothingEyesGlassesSunglasses: 2
+    ClothingEyesGlassesGarSec: 1
     ClothingEyesHudSecurity: 2
     ClothingBeltSecurityWebbing: 5
     Zipties: 12
