--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -16,6 +16,78 @@
 
 - type: entity
   parent: ClothingEyesBase
+  id: ClothingEyesGlassesGarBlack
+  name: black gar glasses
+  description: If it puts your mind at ease, I'll be the one pulling the strings here.
+  components:
+  - type: Sprite
+    sprite: Clothing/Eyes/Glasses/garblack.rsi
+  - type: Clothing
+    sprite: Clothing/Eyes/Glasses/garblack.rsi
+  - type: FlashImmunity
+  - type: EyeProtection
+    protectionTime: 5
+  - type: Tag
+    tags:
+    - Clothing
+    - WhitelistChameleon
+  - type: MeleeWeapon
+    attackRate: 1.5
+    damage:
+      types:
+        Blunt: 7
+
+- type: entity
+  parent: ClothingEyesBase
+  id: ClothingEyesGlassesGarSec
+  name: security gar glasses
+  description: All of my machinations have been devised with your interests in mind.
+  components:
+  - type: Sprite
+    sprite: Clothing/Eyes/Glasses/garsec.rsi
+  - type: Clothing
+    sprite: Clothing/Eyes/Glasses/garsec.rsi
+  - type: ShowSecurityIcons
+  - type: FlashImmunity
+  - type: EyeProtection
+    protectionTime: 5
+  - type: Tag
+    tags:
+    - Clothing
+    - WhitelistChameleon
+  - type: GuideHelp
+    guides:
+    - Security
+  - type: MeleeWeapon
+    attackRate: 1.5
+    damage:
+      types:
+        Blunt: 7
+
+- type: entity
+  parent: ClothingEyesBase
+  id: ClothingEyesGlassesGarMed
+  name: medical gar glasses
+  description: Cool and useful. But you never should have known that.
+  components:
+  - type: Sprite
+    sprite: Clothing/Eyes/Glasses/garmed.rsi
+  - type: Clothing
+    sprite: Clothing/Eyes/Glasses/garmed.rsi
+  - type: ClothingGrantComponent
+    component:
+    - type: ShowHealthBars
+      damageContainer: Biological
+  - type: FlashImmunity
+  - type: EyeProtection
+    protectionTime: 5
+  - type: Tag
+    tags:
+    - Clothing
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingEyesBase
   id: ClothingEyesGlassesGarOrange
   name: orange gar glasses
   description: Just who the hell do you think I am?!
